<resources>
    <string name="app_name">SmartTrack</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_hint">Usuario</string>
    <string name="password_hint">Contraseña</string>
    <string name="li_btn_login">Ingresar</string>
    <string name="li_cb_auth_fingerprint">¿Desea utilizar el lector de huella digital?</string>
    <string name="cancel_btn">Cancelar</string>
    <string name="am_employees_btn">Empleados</string>
    <string name="em_btn_trajects">Viajes</string>
    <string name="el_btn_addEmployee">Nuevo</string>
    <string name="el_btn_removeEmployee">Eliminar</string>
    <string name="cu_in_username">Nombre de usuario</string>
    <string name="cu_in_password">Contraseña</string>
    <string name="cu_in_name">Nombre</string>
    <string name="cu_in_lastname">Apellido</string>
    <string name="cu_in_identityNumber">Cédula identidad</string>
    <string name="cu_btn_cancel">Cancelar</string>
    <string name="cu_btn_addEmployee">Agregar</string>
    <string name="cu_title">Empleado</string>
    <string name="el_btn_editEmployee">Editar</string>
    <string name="uu_btn_updateEmployee">Editar</string>
    <string name="title_activity_maps">Map</string>
    <string name="am_tracking">Tracking</string>
    <string name="em_start_traject_btn">Comenzar!</string>
    <string name="em_new_incident_btn">Incidentes</string>

    <!-- TODO: Borrar si no se usan -->

    <string name="em_start_workingday_btn">Comenzar jornada</string>
    <string name="am_logout_btn">Cerrar sesión</string>
    <string name="emenu_new_traject">Nuevo trayecto</string>
    <string name="em_btn_change_password">Cambiar contraseña</string>
    <string name="em_txt_title">Menú Principal</string>
    <string name="em_btn_logout">Cerrar sesión</string>
    <string name="ci_title">Incidente</string>
    <string name="ci_txt_input_location">Ubicación</string>
    <string name="ci_btn_addIncident">Agregar</string>
    <string name="ci_btn_cancel">Cancelar</string>
    <string name="ci_txt_input_description">Descripción</string>

    <string name="ri_title">Listado incidentes</string>
    <string name="ri_btn_date_from">Fecha desde</string>
    <string name="ri_btn_date_to">Fecha hasta</string>
    <string name="am_trajects_report_btn">Reporte trayectos</string>
    <string name="am_incidents_report_btn">Reporte incidentes</string>
    <string name="ri_btn_accept">Aceptar</string>
    <string name="ri_btn_cancel">Cancelar</string>
    <string name="am_txt_title">Menú Principal</string>
    <string name="ri_btn_export">Exportar</string>
    <string name="rt_title">Reporte trayectos</string>
    <string name="rt_btn_date_from">Fecha desde</string>
    <string name="rt_btn_date_to">Fecha hasta</string>
    <string name="rt_btn_export" />
    <string name="rt_btn_accept">Aceptar</string>
    <string name="rt_total_distance">Distancia total: 0.0 m</string>
    <string name="rt_total_duration">Duración total: 0.0 s</string>


</resources>
