<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    tools:context=".view.MainAdminFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/em_txt_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="100dp"
        android:paddingTop="50dp"
        android:text="@string/am_txt_title"
        android:textAllCaps="false"
        android:textSize="24sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/am_employees_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:layout_below="@id/em_txt_title"
        android:text="@string/am_employees_btn" />

    <Button
        android:id="@+id/am_tracking"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/am_employees_btn"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/am_tracking" />

    <Button
        android:id="@+id/am_incidents_report_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/am_tracking"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/am_incidents_report_btn" />

    <Button
        android:id="@+id/am_trajects_report_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/am_incidents_report_btn"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/am_trajects_report_btn" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/am_logout_btn"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/am_trajects_report_btn"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/am_logout_btn" />

</RelativeLayout>
