<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/rt_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rt_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        tools:layout_editor_absoluteX="160dp"
        tools:layout_editor_absoluteY="59dp" />

    <Button
        android:id="@+id/rt_btn_date_from"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rt_title"
        android:layout_marginStart="10dp"
        android:layout_marginTop="25dp"
        android:text="@string/rt_btn_date_from" />
    <Button
        android:id="@+id/rt_btn_date_to"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rt_btn_date_from"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/rt_btn_date_to" />

    <EditText
        android:id="@+id/rt_txt_date_from"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rt_title"
        android:layout_marginStart="10dp"
        android:layout_marginTop="25dp"
        android:layout_toEndOf="@+id/rt_btn_date_from"
        android:clickable="false"
        android:cursorVisible="false"
        android:ems="10"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:inputType="none"
        android:text=""
        android:textAlignment="center"/>

    <EditText
        android:id="@+id/rt_txt_date_to"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rt_btn_date_from"
        android:layout_toEndOf="@+id/rt_btn_date_to"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:inputType="none"
        android:text=""
        android:textAlignment="center"
        android:clickable="false"
        android:cursorVisible="false"
        android:focusable="false"
        android:focusableInTouchMode="false" />

    <ListView
        android:id="@+id/rt_list_view"
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_below="@+id/rt_btn_date_to"
        android:layout_marginBottom="10dp">

    </ListView>

    <TextView
        android:id="@+id/rt_total_distance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rt_list_view"
        android:text="@string/rt_total_distance"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp" />

    <TextView
        android:id="@+id/rt_total_duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rt_total_distance"
        android:text="@string/rt_total_duration"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp" />

    <RelativeLayout
        android:id="@+id/rt_relative_layout_btns"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:layout_below="@+id/rt_total_duration">

        <ImageButton
            android:id="@+id/rt_btn_export"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:src="@drawable/ic_pdf_export"
            android:text="@string/rt_btn_export" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/rt_btn_cancel"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="36dp"
            android:layout_marginRight="36dp"
            android:layout_toStartOf="@id/rt_btn_accept"
            android:layout_toLeftOf="@id/rt_btn_accept"
            android:text="@string/ri_btn_cancel" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/rt_btn_accept"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/rt_btn_accept" />

    </RelativeLayout>


</RelativeLayout>